# uxaudit

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  setup.cfg
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
docs/: plan.md
tests/: test_prompts.py
uxaudit/: aggregate.py  audit.py  browser.py  capture.py  cli.py  config.py  gemini_client.py  prompts.py  schema.py  utils.py
