[project]
name = "uxaudit"
version = "0.1.0"
description = "UX/UI audit tool with screenshots and Gemini analysis"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "google-genai>=1.51.0",
  "playwright>=1.45.0",
  "pydantic>=2.6.0",
  "pydantic-settings>=2.2.1",
  "typer>=0.12.0",
]

[project.scripts]
uxaudit = "uxaudit.cli:main"

[tool.setuptools]
packages = ["uxaudit"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
